tests/diagnostics/catalog/snapshots/ir/IR0042.snap
error[IR0042]: IR_E_INVALID_PATTERN
 --> tests/diagnostics/catalog/sources/ir/IR0042.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0042
  = help: keep IR validation diagnostics structured and catalog-backed
